--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.4rem 0.8rem;
+  padding: 0.8rem;
   background-color: #12141a;
   border-bottom: 1px solid #292d36;
 }
